<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/register_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_fill_the_fields_below"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:textColor="@color/main_color"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/register_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/with_your_personal_information"
        android:layout_marginTop="0dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/register_heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



    <EditText
        android:id="@+id/register_fullName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/my_grey"
        android:hint="@string/full_name"
        android:textSize="14sp"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/register_tagline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/register_address"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/my_grey"
        android:hint="@string/address"
        android:textSize="14sp"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/register_fullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/my_grey"
        android:hint="@string/email_adress"
        android:textSize="14sp"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/register_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/my_grey"
        android:hint="@string/password"
        android:textSize="14sp"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/register_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/my_button"
        android:text="@string/register"
        android:paddingLeft="12dp"
        android:paddingTop="2dp"
        android:paddingRight="12dp"
        android:textSize="14sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/register_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ProgressBar
        android:id="@+id/register_progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/main_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        />

</androidx.constraintlayout.widget.ConstraintLayout>