<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <ImageView
        android:id="@+id/pageLogo"
        android:layout_width="124dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/kasuwa_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kasuwa_logo" />

    <EditText
        android:id="@+id/add_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/name"
        android:padding="8dp"
        android:textSize="14sp"
        android:background="@color/my_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pageLogo"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/add_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"
        android:padding="8dp"
        android:background="@color/my_grey"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:scrollbars="vertical"
        android:autofillHints="Item description here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_name" />

    <Spinner
        android:id="@+id/add_category"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/white_border_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_description" />

    <ImageView
        android:id="@+id/add_product_image"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/my_grey"
        android:contentDescription="@string/upload_an_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_category"
        app:srcCompat="@drawable/ic_attach_2" />

    <ImageButton
        android:id="@+id/add_image_add_image_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/add_picture_button"
        android:onClick="addPicture"
        app:layout_constraintBottom_toBottomOf="@+id/add_product_image"
        app:layout_constraintEnd_toEndOf="@+id/add_product_image"
        app:srcCompat="@drawable/ic_add"
        android:contentDescription="@string/add_an_image_button_browse_device" />

    <Button
        android:id="@+id/add_image_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        android:background="@drawable/my_button"
        android:onClick="saveProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_product_image" />


</androidx.constraintlayout.widget.ConstraintLayout>